# rocket_propulsion_toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: custom_gri30_highT.yaml  data_usage.py  material_properties.yaml
src/: __init__.py  config_loader.py  input.yaml  methalox.yaml
src/cad/: cad_test.py  ex13.step
src/conf/: config.yaml
src/engine/: combustion.py  performance.py  thrust_chamber.py
src/utils/: canteraVScea.py  counterflow.py  reactor_network.py
